--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
   <title>Научиться учиться</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body class="page">
-    <header class="header"></header>
+<body class="root">
+    <header class="header">
+      <img src="./images/header__logo.svg" alt="Россия" class="header__logo">
+      <nav class="header__links">
+        <a href="#" class="header__link">Ru</a>
+        <a href="#" class="header__link link-none">En</a>
+      </nav>
+    </header>
     <main class="content"></main>
     <footer class="footer"></footer>
 </body>
