--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
         <a href="#" class="header__link link-none">En</a>
       </nav>
     </header>
-    <main class="content"></main>
+    <main class="content">
+      <section class="lead">
+        <h1 class="lead__title">Путешествия по России</h1>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+        <img src="./images/lead__image.png" alt="Обложка с картой России" class="lead__image">
+        <p class="lead__caption">Ваша полка — верхняя</p>
+      </section>
+    </main>
     <footer class="footer"></footer>
 </body>
 </html>
