--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="header">
       <img src="./images/header__logo.svg" alt="Россия" class="header__logo">
       <nav class="header__links">
-        <a href="#" class="header__link">Ru</a>
-        <a href="#" class="header__link link-none">En</a>
+        <a href="#" class="header__link header__link_active">Ru</a>
+        <a href="#" class="header__link">En</a>
       </nav>
     </header>
     <main class="content">
@@ -20,6 +20,27 @@
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img src="./images/lead__image.png" alt="Обложка с картой России" class="lead__image">
         <p class="lead__caption">Ваша полка — верхняя</p>
+      </section>
+      <section class="intro">
+        <h1 class="intro__title">Чего мы там не видели?</h1>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+        <ul class="intro__list">
+          <li>
+            <span class="intro__list_bold">Часовых поясов</span> 11
+          </li>
+          <li>
+            <span class="intro__list_bold">Объектов природного наследия ЮНЕСКО</span> 12
+          </li>
+          <li>
+            <span class="intro__list_bold">Объектов культурного наследия ЮНЕСК</span> 16
+          </li>
+          <li>
+            <span class="intro__list_bold">Природных заповедников</span> 105
+          </li>
+          <li>
+            <span class="intro__list_bold">Аэропортов</span> 241
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer"></footer>
