--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </section>
       <section class="intro">
         <h1 class="intro__title">Чего мы там не видели?</h1>
-        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
           <li>
             <span class="intro__list_bold">Часовых поясов</span> 11
@@ -41,6 +41,20 @@
             <span class="intro__list_bold">Аэропортов</span> 241
           </li>
         </ul>
+      </section>
+      <section class="photo-grid">
+        <img src="./images/photo-grid__item-0.png" alt="Фото 1" class="photo-grid__item">
+        <img src="./images/photo-grid__item-1.png" alt="Фото 2" class="photo-grid__item">
+        <img src="./images/photo-grid__item-2.png" alt="Фото 3" class="photo-grid__item">
+        <img src="./images/photo-grid__item-3.png" alt="Фото 4" class="photo-grid__item">
+        <img src="./images/photo-grid__item-4.png" alt="Фото 5" class="photo-grid__item">
+        <img src="./images/photo-grid__item-5.png" alt="Фото 6" class="photo-grid__item">
+        <img src="./images/photo-grid__item-6.png" alt="Фото 7" class="photo-grid__item">
+        <img src="./images/photo-grid__item-7.png" alt="Фото 8" class="photo-grid__item">
+        <img src="./images/photo-grid__item-8.png" alt="Фото 9" class="photo-grid__item">
+        <img src="./images/photo-grid__item-9.png" alt="Фото 10" class="photo-grid__item">
+        <img src="./images/photo-grid__item-10.png" alt="Фото 11" class="photo-grid__item">
+        <img src="./images/photo-grid__item-11.png" alt="Фото 12" class="photo-grid__item">
       </section>
     </main>
     <footer class="footer"></footer>
