added block cover, delete mq 320px from all css files, added block link

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <header class="header">
     <img src="./images/header__logo.svg" alt="Россия" class="header__logo">
     <nav class="header__links">
-      <a href="#" class="header__link header__link_active">Ru</a>
-      <a href="#" class="header__link">En</a>
+      <a href="#" class="header__link header__link_active link">Ru</a>
+      <a href="#" class="header__link link">En</a>
     </nav>
   </header>
   <main class="content">
@@ -64,11 +64,11 @@
       <img src="./images/photo-grid__item-11.png" alt="Фото 12" class="photo-grid__item">
     </section>
     <section class="places">
-      <div class="place">
+      <article class="place">
         <h1 class="place__title">Куршская коса</h1>
         <div class="place__website">
           <p class="place__website__url-heading">URL</p>
-          <a href="http://park-kosa.ru" class="place__website__link">park-kosa.ru</a>
+          <a href="http://park-kosa.ru" class="place__website__link link">park-kosa.ru</a>
         </div>
         <img src="./images/places__image-0.png" alt="Куршская коса" class="place__image">
         <div class="place__paragraphs">
@@ -80,13 +80,13 @@
             и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная
             в спокойствие природы и запах стального, прохладного моря.</p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h1 class="place__title">Кольский</h1>
         <div class="place__website">
           <p class="place__website__url-heading">URL</p>
           <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
-            class="place__website__link">National Geographic</a>
+            class="place__website__link link">National Geographic</a>
         </div>
         <img src="./images/places__image-1.png" alt="Кольский" class="place__image">
         <div class="place__paragraphs">
@@ -97,12 +97,12 @@
             Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
             накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h1 class="place__title">Алтай</h1>
         <div class="place__website">
           <p class="place__website__url-heading">URL</p>
-          <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__website__link">YouTube</a>
+          <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__website__link link">YouTube</a>
         </div>
         <img src="./images/places__image-2.png" alt="Алтай" class="place__image">
         <div class="place__paragraphs">
@@ -113,12 +113,12 @@
             всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах
             пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h1 class="place__title">Зимний Байкал</h1>
         <div class="place__website">
           <p class="place__website__url-heading">URL</p>
-          <a href="https://vk.com/baikalmile" class="place__website__link">https://vk.com/baikalmile</a>
+          <a href="https://vk.com/baikalmile" class="place__website__link link">https://vk.com/baikalmile</a>
         </div>
         <img src="./images/places__image-3.png" alt="Зимний Байкал" class="place__image">
         <div class="place__paragraphs">
@@ -129,20 +129,28 @@
             старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был
             поставлен мировой рекорд — 197.011 км/ч.</p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h1 class="place__title">Карелия</h1>
         <div class="place__website">
           <p class="place__website__url-heading">URL</p>
-          <a href="http://vodlozero.ru" class="place__website__link">http://vodlozero.ru/</a>
+          <a href="http://vodlozero.ru" class="place__website__link link">http://vodlozero.ru/</a>
         </div>
         <img src="./images/places__image-4.png" alt="Карелия" class="place__image">
         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
           лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
-          национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+          национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше
+          чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
           В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров
           от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-      </div>
+      </article>
+    </section>
+    <section class="cover">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__background-link">
+          <h1 class="cover__title">До Байкала «на собаках»</h1>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
+            на электричках.</p>
+        </a>
     </section>
   </main>
   <footer class="footer"></footer>
