--- a/index.html
+++ b/index.html
@@ -153,7 +153,18 @@
         </a>
     </section>
   </main>
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <nav>
+      <ul class="footer__links">
+        <li><a href="#" class="footer__link link">Карты</a></li>
+        <li><a href="#" class="footer__link link">Погода</a></li>
+        <li><a href="#" class="footer__link link">Расписание</a></li>
+        <li><a href="#" class="footer__link link">Календарь</a></li>
+        <li><a href="#" class="footer__link link">Путешествия</a></li>
+      </ul>
+    </nav>
+    <p class="footer__copyright">© Марина Кирьянова</p>
+  </footer>
 </body>
 
 </html>
