added target blank

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h1 class="place__title">Куршская коса</h1>
         <div class="place__website">
           <p class="place__website__url-heading">URL</p>
-          <a href="http://park-kosa.ru" class="place__website__link link">park-kosa.ru</a>
+          <a href="http://park-kosa.ru" target="_blank" class="place__website__link link">park-kosa.ru</a>
         </div>
         <img src="./images/places__image-0.png" alt="Куршская коса" class="place__image">
         <div class="place__paragraphs">
@@ -85,7 +85,7 @@
         <h1 class="place__title">Кольский</h1>
         <div class="place__website">
           <p class="place__website__url-heading">URL</p>
-          <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+          <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank"
             class="place__website__link link">National Geographic</a>
         </div>
         <img src="./images/places__image-1.png" alt="Кольский" class="place__image">
@@ -102,7 +102,7 @@
         <h1 class="place__title">Алтай</h1>
         <div class="place__website">
           <p class="place__website__url-heading">URL</p>
-          <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__website__link link">YouTube</a>
+          <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank" class="place__website__link link">YouTube</a>
         </div>
         <img src="./images/places__image-2.png" alt="Алтай" class="place__image">
         <div class="place__paragraphs">
@@ -118,7 +118,7 @@
         <h1 class="place__title">Зимний Байкал</h1>
         <div class="place__website">
           <p class="place__website__url-heading">URL</p>
-          <a href="https://vk.com/baikalmile" class="place__website__link link">https://vk.com/baikalmile</a>
+          <a href="https://vk.com/baikalmile" target="_blank" class="place__website__link link">https://vk.com/baikalmile</a>
         </div>
         <img src="./images/places__image-3.png" alt="Зимний Байкал" class="place__image">
         <div class="place__paragraphs">
@@ -134,7 +134,7 @@
         <h1 class="place__title">Карелия</h1>
         <div class="place__website">
           <p class="place__website__url-heading">URL</p>
-          <a href="http://vodlozero.ru" class="place__website__link link">http://vodlozero.ru/</a>
+          <a href="http://vodlozero.ru" target="_blank" class="place__website__link link">http://vodlozero.ru/</a>
         </div>
         <img src="./images/places__image-4.png" alt="Карелия" class="place__image">
         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
@@ -146,7 +146,7 @@
       </article>
     </section>
     <section class="cover">
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__background-link">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background-link">
           <h1 class="cover__title">До Байкала «на собаках»</h1>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
             на электричках.</p>
@@ -156,11 +156,11 @@
   <footer class="footer">
     <nav>
       <ul class="footer__links">
-        <li><a href="#" class="footer__link link">Карты</a></li>
-        <li><a href="#" class="footer__link link">Погода</a></li>
-        <li><a href="#" class="footer__link link">Расписание</a></li>
-        <li><a href="#" class="footer__link link">Календарь</a></li>
-        <li><a href="#" class="footer__link link">Путешествия</a></li>
+        <li><a href="#" target="_blank" class="footer__link link">Карты</a></li>
+        <li><a href="#" target="_blank" class="footer__link link">Погода</a></li>
+        <li><a href="#" target="_blank" class="footer__link link">Расписание</a></li>
+        <li><a href="#" target="_blank" class="footer__link link">Календарь</a></li>
+        <li><a href="#" target="_blank" class="footer__link link">Путешествия</a></li>
       </ul>
     </nav>
     <p class="footer__copyright">© Марина Кирьянова</p>
