change name background

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </article>
     </section>
     <section class="cover">
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background-link">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
           <h1 class="cover__title">До Байкала «на собаках»</h1>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
             на электричках.</p>
