--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Научиться учиться</title>
+  <title>Путешествия по России</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
@@ -67,8 +67,8 @@
       <article class="place">
         <h1 class="place__title">Куршская коса</h1>
         <div class="place__website">
-          <p class="place__website__url-heading">URL</p>
-          <a href="http://park-kosa.ru" target="_blank" class="place__website__link link">park-kosa.ru</a>
+          <p class="place__url-heading">URL</p>
+          <a href="http://park-kosa.ru" target="_blank" class="place__link link">park-kosa.ru</a>
         </div>
         <img src="./images/places__image-0.png" alt="Куршская коса" class="place__image">
         <div class="place__paragraphs">
@@ -84,9 +84,9 @@
       <article class="place">
         <h1 class="place__title">Кольский</h1>
         <div class="place__website">
-          <p class="place__website__url-heading">URL</p>
+          <p class="place__url-heading">URL</p>
           <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank"
-            class="place__website__link link">National Geographic</a>
+            class="place__link link">National Geographic</a>
         </div>
         <img src="./images/places__image-1.png" alt="Кольский" class="place__image">
         <div class="place__paragraphs">
@@ -101,8 +101,8 @@
       <article class="place">
         <h1 class="place__title">Алтай</h1>
         <div class="place__website">
-          <p class="place__website__url-heading">URL</p>
-          <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank" class="place__website__link link">YouTube</a>
+          <p class="place__url-heading">URL</p>
+          <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank" class="place__link link">YouTube</a>
         </div>
         <img src="./images/places__image-2.png" alt="Алтай" class="place__image">
         <div class="place__paragraphs">
@@ -117,8 +117,8 @@
       <article class="place">
         <h1 class="place__title">Зимний Байкал</h1>
         <div class="place__website">
-          <p class="place__website__url-heading">URL</p>
-          <a href="https://vk.com/baikalmile" target="_blank" class="place__website__link link">https://vk.com/baikalmile</a>
+          <p class="place__url-heading">URL</p>
+          <a href="https://vk.com/baikalmile" target="_blank" class="place__link link">https://vk.com/baikalmile</a>
         </div>
         <img src="./images/places__image-3.png" alt="Зимний Байкал" class="place__image">
         <div class="place__paragraphs">
@@ -133,8 +133,8 @@
       <article class="place">
         <h1 class="place__title">Карелия</h1>
         <div class="place__website">
-          <p class="place__website__url-heading">URL</p>
-          <a href="http://vodlozero.ru" target="_blank" class="place__website__link link">http://vodlozero.ru/</a>
+          <p class="place__url-heading">URL</p>
+          <a href="http://vodlozero.ru" target="_blank" class="place__link link">http://vodlozero.ru/</a>
         </div>
         <img src="./images/places__image-4.png" alt="Карелия" class="place__image">
         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
