added media query 786px

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <img src="./images/lead__image.png" alt="Обложка с картой России" class="lead__image">
+      <img src="./images/lead__image.png" alt="Обложка с картой России и девушкой на полке вагона" class="lead__image">
       <p class="lead__caption">Ваша полка — верхняя</p>
     </section>
     <section class="intro">
@@ -39,7 +39,7 @@
           <span class="intro__list_bold">Объектов природного наследия ЮНЕСКО</span> 12
         </li>
         <li>
-          <span class="intro__list_bold">Объектов культурного наследия ЮНЕСК</span> 16
+          <span class="intro__list_bold">Объектов культурного наследия ЮНЕСКО</span> 16
         </li>
         <li>
           <span class="intro__list_bold">Природных заповедников</span> 105
@@ -125,7 +125,7 @@
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это
             самый большой источник пресной воды и одно из красивейших мест в России.</p>
           <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для
-            соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем
+            соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем
             старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был
             поставлен мировой рекорд — 197.011 км/ч.</p>
         </div>
@@ -148,7 +148,7 @@
     <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
           <h1 class="cover__title">До Байкала «на собаках»</h1>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
             на электричках.</p>
         </a>
     </section>
@@ -163,7 +163,7 @@
         <li><a href="#" target="_blank" class="footer__link link">Путешествия</a></li>
       </ul>
     </nav>
-    <p class="footer__copyright">© Марина Кирьянова</p>
+    <p class="footer__copyright">© 2023. Марина Кирьянова</p>
   </footer>
 </body>
 
