added media query 1024px

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body class="root">
   <header class="header">
     <img src="./images/header__logo.svg" alt="Россия" class="header__logo">
-    <nav class="header__links">
-      <a href="#" class="header__link header__link_active link">Ru</a>
-      <a href="#" class="header__link link">En</a>
+    <nav class="header__lang-links">
+      <a href="#" class="header__lang-link header__lang-link_active link">Ru</a>
+      <a href="#" class="header__lang-link link">En</a>
     </nav>
   </header>
   <main class="content">
