made a fix of photo-grid and photo-grid__list

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </ul>
     </section>
     <section class="photo-grid" aria-label="Галерея пейзажей нашей родины">
-      <ul class="photo-grid photo-grid__list">
+      <ul class="photo-grid__list">
         <li><img src="./images/photo-grid__item-0.png" alt="Вид из окна плацкартного вагона" class="photo-grid__item"></li>
         <li><img src="./images/photo-grid__item-1.png" alt="Снежные вершины в облаках" class="photo-grid__item"></li>
         <li><img src="./images/photo-grid__item-2.png" alt="Лис на стоге сена на рассвете" class="photo-grid__item"></li>
